finished v1.0 at home

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 				<div class="row">
 					<div class="dropdown">
 						<ul id="nav" class="nav">
-							<li class="menu-item"><a class="smoothScroll" href="#about" title="About"><i class="icon-user"></i></a></li>
-							<li class="menu-item"><a class="smoothScroll" href="#resume" title="Resume"><i class="icon-file"></i></a></li>
-							<li class="menu-item"><a class="smoothScroll" href="#work" title="Works"><i class="icon-briefcase"></i></a></li>
+							<li class="menu-item"><a class="smoothScroll" href="#about" title="关于我"><i class="icon-user"></i></a></li>
+							<li class="menu-item"><a class="smoothScroll" href="#resume" title="个人经历"><i class="icon-file"></i></a></li>
+							<li class="menu-item"><a class="smoothScroll" href="#skillswrap" title="个人技能"><i class="icon-briefcase"></i></a></li>
 							<li class="menu-item"><a class="smoothScroll" href="#contact" title="Contact"><i class="icon-envelope"></i></a></li>
 						</ul><!--/ uL#nav -->
 					</div><!-- /.dropdown -->
@@ -39,6 +39,7 @@
 	</div><!--/ #section-topbar -->	
 	<div id="headerwrap">
 		<div class="container">
+			<div class="pri_img"></div>
 			<div class="row centered">
 				<div class="col-lg-12">
 					<h1>祝 伟 锋</h1>
@@ -55,7 +56,7 @@
 					<h5>关于我</h5>
 				</div>
 				<div class="col-lg-6">
-					<p>我是一名Web前端开发工程师，工作在携程旅行网，主要负责火车票、分销联盟部分页面的前端开发工作。目前有两年多的项目经验，早期做过一些j2EE的整站系统，最近一年多专注于Web的前端开发工作。个人爱好是跑步和看电影，自认为为人谦和，非典型山东人。</p>
+					<p>我是一名Web前端开发工程师，工作在携程旅行网，主要负责火车票、分销联盟部分页面的前端开发工作。目前有两年多的项目经验，早期做过一些J2EE的整站系统，最近一年多专注于Web的前端开发工作。个人爱好是跑步和看电影，自认为为人谦和，非典型山东人。</p>
 				</div>
 				<div class="col-lg-3">
 					<a href="#"><i class="icon-file"></i></a> <sm>下载 PDF</sm></p>
@@ -120,7 +121,7 @@
 			</div>
 			<div class="col-lg-6">
 				<p><t>最佳新人奖</t><br/>
-					携程旅行网 <br/>
+					携程旅行网UED <br/>
 				</p>
 			</div>
 			<div class="col-lg-3">
@@ -231,11 +232,11 @@
 						<script>
 							var doughnutData = [
 									{
-										value: 50,
+										value: 40,
 										color:"#1abc9c"
 									},
 									{
-										value : 50,
+										value : 60,
 										color : "#ecf0f1"
 									}
 								];
@@ -269,45 +270,7 @@
 	</div><!--/ #skillswrap -->
 	<section id="work" name="work"></section>
 	<!--PORTFOLIO DESCRIPTION -->
-	<div class="container desc">
-		<div class="row">
-				<div class="col-lg-2 col-lg-offset-1">
-					<h5>PORTFOLIO</h5>
-				</div>
-				<div class="col-lg-6">
-					<p><img class="img-responsive" src="img/port01.jpg" alt=""></p>
-				</div>
-				<div class="col-lg-3">
-					<p>CANALS OF ENGLAND</p>
-				<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
-					<sm><i class="icon-tag"></i> design</sm></more> 
-				</p>
-				</div>
-	
-				<div class="col-lg-6 col-lg-offset-3">
-					<p><img class="img-responsive" src="img/port02.jpg" alt=""></p>
-				</div>
-				<div class="col-lg-3">
-						<p>SANKEY</p>
-					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
-						<sm><i class="icon-tag"></i> front-end</sm></more> 
-					</p>
-				</div>
-				
-				<div class="col-lg-6 col-lg-offset-3">
-					<p><img class="img-responsive" src="img/port03.jpg" alt=""></p>
-				</div>
-				<div class="col-lg-3">
-						<p>WE GROW</p>
-					<p><more>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.<br/><br/>
-						<sm><i class="icon-tag"></i> web design</sm></more> 
-					</p>
-				</div>
-		
-		</div><!--/.row -->
-		<br>
-		<br>
-	</div><!--/.container -->
+
 	<section id="contact" name="contact"></section>
 	<!--FOOTER DESCRIPTION -->
 	<div id="footwrap">
@@ -318,18 +281,13 @@
 				</div>
 				<div class="col-lg-6">
 					<p><t>Email</t><br/>
-						william@blacktie.co <br/>
+						zh_wf@163.com <br/>
 					</p>
-					<p><t>Adress</t><br/>
-						Some Ave. 987 <br/>
-						Postal 23892 <br/>
-						London, England. <br/>
-					</p>
-					<p><t>Phone</t><br/>
-						+55 8933-2383 <br/>
+					<p><t>手机</t><br/>
+						156 0188 0309 <br/>
 					</p>
 				</div>
-				<div class="col-lg-3">
+				<div class="col-lg-3" style="display:none;">
 					<p><sm>SOCIAL LINKS</sm></p>
 					<p>
 						<a href="#"><i class="icon-dribbble"></i></a>
@@ -344,7 +302,7 @@
 		</div><!--/.container -->
 	</div><!--/ #footer -->
 	
-	<div id="c">
+	<div id="c" style="display:none;">
 		<div class="container">
 			<p>Created by <a href="http://www.blacktie.co">BLACKTIE.CO</a></p>
 		
