finished v1.1 at ctrip

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Kelvin - Bootstrap 3 Resume Theme</title>
+    <title>祝伟锋的resume</title>
     <!-- Bootstrap core CSS -->
     <link href="style/bootstrap.css" rel="stylesheet">
     <!-- Custom styles for this template -->
@@ -36,10 +36,10 @@
 
 			<div class="clear"></div>
 		</div><!--/ #topbar-inner -->
-	</div><!--/ #section-topbar -->	
+	</div><!--/ #section-topbar -->
+	<div class="pri_img"></div>	
 	<div id="headerwrap">
 		<div class="container">
-			<div class="pri_img"></div>
 			<div class="row centered">
 				<div class="col-lg-12">
 					<h1>祝 伟 锋</h1>
@@ -270,7 +270,33 @@
 	</div><!--/ #skillswrap -->
 	<section id="work" name="work"></section>
 	<!--PORTFOLIO DESCRIPTION -->
-
+	<div class="container desc">
+		<div class="row">
+			<div class="col-lg-2 col-lg-offset-1">
+				<h5>主要作品展示</h5>
+			</div>
+			<div class="col-lg-3">
+				<p>携程火车票</p>
+			<p><more><a href="http://trains.ctrip.com/">http://trains.ctrip.com/</a><br><br>
+				<sm><i class="icon-tag"></i> front-end</sm></more> 
+			</p>
+			</div>
+			<div class="col-lg-3">
+				<p>携程分校联盟</p>
+				<p><more><a href="http://u.ctrip.com/union/">http://u.ctrip.com/</a><br><br>
+					<sm><i class="icon-tag"></i> front-end</sm></more> 
+				</p>
+			</div>
+			<div class="col-lg-3">
+				<p>携程多域名</p>
+				<p><more><a href="http://www.ctrip.cn/">http://www.ctrip.cn/</a><br><br>
+					<sm><i class="icon-tag"></i> front-end</sm></more> 
+				</p>
+			</div>
+		</div><!--/.row -->
+		<br>
+		<br>
+	</div>
 	<section id="contact" name="contact"></section>
 	<!--FOOTER DESCRIPTION -->
 	<div id="footwrap">
