totally finished at ctrip

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<p>我是一名Web前端开发工程师，工作在携程旅行网，主要负责火车票、分销联盟部分页面的前端开发工作。目前有两年多的项目经验，早期做过一些J2EE的整站系统，最近一年多专注于Web的前端开发工作。个人爱好是跑步和看电影，自认为为人谦和，非典型山东人。</p>
 				</div>
 				<div class="col-lg-3">
-					<a href="#"><i class="icon-file"></i></a> <sm>下载 PDF</sm></p>
+					<a href="data/ZhuWeifeng.pdf"><i class="icon-file"></i></a> <sm>下载 PDF</sm></p>
 				</div>
 				
 			</div><!--/.row -->
